FIX: Sidebar title spill-over bug (#526)

--- a/src/sphinx_book_theme/assets/styles/sections/_sidebar-primary.scss
+++ b/src/sphinx_book_theme/assets/styles/sections/_sidebar-primary.scss
@@ -90,6 +90,7 @@ div.navbar-brand-box {
   a.navbar-brand {
     width: 100%;
     height: auto;
+    flex-direction: column;
 
     img {
       display: block;
